<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.milesight.beaveriot</groupId>
        <artifactId>entity</artifactId>
        <version>1.1.0-SNAPSHOT</version>
    </parent>

    <artifactId>entity-service</artifactId>
    <name>entity-service</name>
    <description>An open-source platform designed for rapid and intuitive IoT application development.</description>
    <url>https://github.com/milesight-iot/beaver-iot</url>
    <scm>
        <url>https://github.com/milesight-iot/beaver-iot</url>
    </scm>
    <organization>
        <name>Milesight</name>
        <url>https://www.milesight.com</url>
    </organization>
    <developers>
        <developer>
            <id>Simon</id>
            <name>Simon Zhao</name>
            <email>simon.zhao@milesight.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/MIT</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- mapstruct -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-mapstruct-binding</artifactId>
        </dependency>

        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>context</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>data-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>user-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>entity-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>device-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>permission-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>data-jpa</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.0.0</version>
            <scope>compile</scope>
        </dependency>

        <!--  Testing  -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.spockframework</groupId>
            <artifactId>spock-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--      unit test       -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
